# igv_report_curator

./: README.md  compose.yml  dockerfile  pyproject.toml
igv_curator/: package-lock.json  package.json
igv_curator/src-tauri/: Cargo.toml  tauri.conf.json
